--- a/public/login.css
+++ b/public/login.css
@@ -27,7 +27,7 @@ button {
     margin-top: 10px;
 }
 #infoText {
-    color: green;
+    color: red;
     font-size: 14px;
     font-style: italic;
 }
